feat udistrital/arka_cliente#952: Filtro vinculaciones
- Se implementa servicio que permite consultar cierto tipo de vinculaciones así como filtrar por documento y nombre de tercero.
