# controllers/vinculacion.go
@@ -204,3 +204,26 @@ func (c *VinculacionController) Delete() {
 	}
 	c.ServeJSON()
 }
+
+// GetAllTrVinculacionIdentificacion ...
+// @Title GetAllTrVinculacionIdentificacion
+// @Description Consulta en las tablas vinculcación, tercero y datos_identificacion el string suministrado
+// @Param	query			query	string	true	"tipo documento + numero documento + nombre completo"
+// @Param	vinculaciones	query	string	false	"tipo_vinculacion_id separados por comas"
+// @Success 200 {object} []models.DatosIdentificacionTercero_
+// @Failure 404 not found resource
+// @router /identificacion [get]
+func (c *VinculacionController) GetAllTrVinculacionIdentificacion() {
+
+	query := c.GetString("query")
+	vinculaciones := c.GetString("vinculaciones")
+	var terceros = make([]models.DatosIdentificacionTercero_, 0)
+	if query != "" {
+		if err := models.GetAllDatosIdentificacionVinculacion(query, vinculaciones, &terceros); err != nil {
+			c.Abort("500")
+		}
+	}
+
+	c.Data["json"] = terceros
+	c.ServeJSON()
+}
