# swagger/swagger.json
@@ -2292,6 +2292,44 @@
                 }
             }
         },
+        "/vinculacion/identificacion": {
+            "get": {
+                "tags": [
+                    "vinculacion"
+                ],
+                "description": "Consulta en las tablas vinculcación, tercero y datos_identificacion el string suministrado",
+                "operationId": "VinculacionController.GetAllTrVinculacionIdentificacion",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "tipo documento + numero documento + nombre completo",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "vinculaciones",
+                        "description": "tipo_vinculacion_id separados por comas",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.DatosIdentificacionTercero_"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
         "/vinculacion/{id}": {
             "get": {
                 "tags": [
@@ -2383,6 +2421,14 @@
         }
     },
     "definitions": {
+        "61653.0xc001ef1530.false": {
+            "title": "false",
+            "type": "object"
+        },
+        "61726.0xc001ef1590.false": {
+            "title": "false",
+            "type": "object"
+        },
         "models.DatosIdentificacion": {
             "title": "DatosIdentificacion",
             "type": "object",
@@ -2437,6 +2483,18 @@
                 "tercero_id": {
                     "type": "integer",
                     "format": "int64"
+                }
+            }
+        },
+        "models.DatosIdentificacionTercero_": {
+            "title": "DatosIdentificacionTercero_",
+            "type": "object",
+            "properties": {
+                "Identificacion": {
+                    "$ref": "#/definitions/61726.0xc001ef1590.false"
+                },
+                "Tercero": {
+                    "$ref": "#/definitions/61653.0xc001ef1530.false"
                 }
             }
         },
